--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,7 +1,11 @@
-<p>
-  search works!
-</p>
-
+<div class="container-fluid">
+  <div class="row">
+    <div class="outer-header">
+    <div class="header">
+      UI Case Study - Hotel Booking Application
+    </div>
+  </div>
+    </div>
  <form  (ngSubmit)="doSearch(searchForm.value)"  [formGroup]="searchForm"> 
       <div >
         <label for="searchString">Search String</label>
@@ -16,3 +20,9 @@
       <button type="submit" class="btn btn-success">Submit</button>
  
     </form>
+
+    <footer>
+      Accenture &copy; 2017
+    </footer>
+
+  </div>
