--- a/src/app/hotel-details/hotel-details.component.html
+++ b/src/app/hotel-details/hotel-details.component.html
@@ -2,13 +2,16 @@
   hotel-details works!
 </p>
 
+
+
+
 Name: {{hotelDetails[0].name}} <br>
 Address:{{hotelDetails[0].address}}<br>
 City:{{hotelDetails[0].city}} <br>
 Zip:{{hotelDetails[0].zip}} <br>
 Price:{{hotelDetails[0].price}} <br>
 
-<button type="button" class="btn btn-info" [routerLink]="['/hotelDetail',hotel._id]" >View Hotel</button>
+<button type="button" class="btn btn-info" [routerLink]="['/bookHotel',hotelDetails[0]._id]" >View Hotel</button>
 
 
 
