--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,32 @@
-<p>
-  home works!
-</p>
-
-
-Show all result
-<ul>
-  <li *ngFor="let user of result">{{ user.name }}</li>
-</ul>
+<div class="container-fluid">
+    <div class="row">
+      <div class="outer-header">
+      <div class="header">
+        UI Case Study - Hotel Booking Application
+      </div>
+    </div>
+      </div>
+  
+      <div class="row">
+        <div class="col-md-2">
+          <img src="/assets/images/main.jpg" class="main-img">
+        </div>
+        <div class="col-md-10">
+          <span id="span">Welcome to UI Case Study for Hotel Booking</span>
+          <p>The sample demonstrates how to use Angular4 and BootStrap to develop a Single Page Application</p>
+          <br>
+          <p>The key features illustrated in the sample include</p>
+          <ul>
+            <li>Angular4 SPA Framework</li>
+            <li>BootStrap as CSS FrameWork</li>
+            <li>Consumption of REST API Hosted on BlueMix</li>
+            <li>Project Using Yeoman-based Generator-Angular generator for Scaffolding</li>
+          </ul>
+          <a routerLink="/search" routerLinkActive="active">Start your Case Study Experience</a>
+        </div>
+      </div>
+  
+      <footer>
+        Accenture &copy; 2017
+      </footer>
+  </div>
