--- a/src/app/bookhotel/bookhotel.component.html
+++ b/src/app/bookhotel/bookhotel.component.html
@@ -1,7 +1,11 @@
-<p>
-  bookhotel works!
-</p>
-
+<div class="container-fluid">
+    <div class="row">
+      <div class="outer-header">
+      <div class="header">
+        UI Case Study - Hotel Booking Application
+      </div>
+    </div>
+      </div>
 
 
 
@@ -68,3 +72,9 @@
   <button type="submit" class="btn btn-success">Submit</button>
 
 </form>
+
+<footer>
+    Accenture &copy; 2017
+  </footer>
+
+</div>
