--- a/src/app/hotel-details/hotel-details.component.html
+++ b/src/app/hotel-details/hotel-details.component.html
@@ -1,7 +1,11 @@
-<p>
-  hotel-details works!
-</p>
-
+<div class="container-fluid">
+    <div class="row">
+      <div class="outer-header">
+      <div class="header">
+        UI Case Study - Hotel Booking Application
+      </div>
+    </div>
+      </div>
 
 
 
@@ -13,6 +17,10 @@ Price:{{hotelDetails[0].price}} <br>
 
 <button type="button" class="btn btn-info" [routerLink]="['/bookHotel',hotelDetails[0]._id]" >View Hotel</button>
 
+<footer>
+    Accenture &copy; 2017
+  </footer>
 
+</div>
 
 
