--- a/src/app/search-result/search-result.component.html
+++ b/src/app/search-result/search-result.component.html
@@ -7,8 +7,16 @@
   </div>
     </div>
 
+
+    <div class="row">
+
+        <div class="col-md-2">
+            <img src="/assets/images/main.jpg" class="main-img">
+          </div>
+
+          <div class="col-md-7" id="mrgn">
 <button type="button" class="btn btn-info" [routerLink]="['/search']" >Change  Search</button>
-<div class="row">
+
 
 
 <table class="table table-hover table-bordered">
@@ -32,6 +40,7 @@
   
   </tbody>
 </table>
+</div>
 </div>
 
 <footer>
